--- a/global.css
+++ b/global.css
@@ -1,16 +1,20 @@
 body {
   list-style-type: none;
   font-family: helvetica, arial, sans-serif;
-  font-size: 0px;
   margin: 0px;
 }
 
-#selectionlist {
+#selectionlist ul {
   list-style-type: none;
   font-size: 15px;
   margin: 0px;
+  width: 200px;
+  background-color: blue;
+  padding: 0px;
 }
 #selectionlist li a {
   display: block;
   width: 60px;
+  text-decoration: none;
+  padding: 8px 16px;
 }
