--- a/global.css
+++ b/global.css
@@ -11,7 +11,7 @@ body {
   margin: 0px;
   width: 200px;
   background-color: deepskyblue;
-  color: gainsboro;
+  color: #DCDCDC;
   padding: 0px;
 }
 
