--- a/global.css
+++ b/global.css
@@ -5,7 +5,7 @@ body {
   font-size: 15px;
 }
 
-#selectionlist {
+#selectionlist ul {
   list-style-type: none;
   font-size: 15px;
   margin: 0px;
@@ -13,6 +13,7 @@ body {
   background-color: deepskyblue;
   color: #DCDCDC;
   padding: 0px;
+  position: fixed;
 }
 
 #selectionlist li a {
