--- a/global.css
+++ b/global.css
@@ -34,6 +34,10 @@ body {
   background-color: deepskyblue;
   color: white;
   padding: 15px;
+  border-radius: 5px;
+  border-style: dotted;
+  border-color: white;
+  border-width: 3px;
 }
 .active {
   background-color: white;
