--- a/global.css
+++ b/global.css
@@ -44,6 +44,7 @@ body {
 #topwrapper {
   background-color: deepskyblue;
   color: white;
+  width: 200px
   padding: 15px;
   border-radius: 5px;
   border-style: dotted;
