--- a/global.css
+++ b/global.css
@@ -10,7 +10,9 @@ body {
   font: Verdana;
   list-style-type: none;
   text-decoration: none;
+  float: left;
 }
+
 #selectionlist ul {
   list-style-type: none;
   font-size: 15px;
