--- a/global.css
+++ b/global.css
@@ -9,12 +9,12 @@ body {
 
 #navbar {
   float: left;
-  display: block;
+  display: inline-block;
   width: 200px;
 }
 
 #selectionlist {
-  display: block;
+  display: inline-block;
   width: 200px;
   font-size: 15px;
   font: Verdana;
