--- a/global.css
+++ b/global.css
@@ -41,6 +41,9 @@ body {
   padding: 8px 16px;
   text-align: center;
   background-color: DimGrey;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  margin-top: 5px;
   border: 2px solid #808080;
   color: black;
 }
