--- a/global.css
+++ b/global.css
@@ -11,6 +11,7 @@ body {
   float: left;
   display: inline-block;
   width: 200px;
+  height: auto;
 }
 
 #selectionlist {
@@ -80,8 +81,5 @@ body {
   color: white;
   padding: 15px;
   width: 350px;
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  right: 0;
+  margin-top: 5px;
 }
