--- a/global.css
+++ b/global.css
@@ -77,7 +77,7 @@ body {
   margin: 2px;
   border: 1px solid gray;
   float: right;
-  background-color: aliceblue;
+  background-color: #0353A4;
   color: white;
   padding: 15px;
   width: 350px;
