--- a/global.css
+++ b/global.css
@@ -78,6 +78,7 @@ body {
   background-color: #0353A4;
   color: white;
   padding: 15px;
+  padding-top: 10px;
   width: 250px;
   margin-top: 5px;
 }
