--- a/global.css
+++ b/global.css
@@ -61,8 +61,8 @@ body {
 
 #topwrapper {
   float: left;
-  background-color: deepskyblue;
-  color: white;
+  background-color: #354c7c;
+  color: #eaebfe;
   width: auto;
   padding: 15px;
   border-radius: 5px;
