--- a/global.css
+++ b/global.css
@@ -4,8 +4,7 @@ body {
   font-size: 15px;
   width: 900px;
   margin: auto;
-  height: auto;
-  border: 2px dotted black;
+  height: auto;S
 }
 
 #navbar {
