--- a/global.css
+++ b/global.css
@@ -16,7 +16,7 @@ body {
 }
 
 #selectionlist {
-  display: inline-block;
+  display: block;
   width: 200px;
   font-size: 15px;
   font: Verdana;
@@ -27,6 +27,7 @@ body {
 }
 
 #selectionlist ul {
+  float: left;
   list-style-type: none;
   font-size: 15px;
   margin: 0px;
@@ -34,6 +35,7 @@ body {
   background-color: deepskyblue;
   color: #DCDCDC;
   padding: 0px;
+  overflow: hidden;
 }
 
 #selectionlist li a {
