--- a/global.css
+++ b/global.css
@@ -39,7 +39,7 @@ body {
 }
 
 #selectionlist li a {
-  display: block;
+  display: inline;
   width: 60px;
   text-decoration: none;
   padding: 8px 16px;
