--- a/global.css
+++ b/global.css
@@ -17,6 +17,31 @@ body {
 }
 
 #selectionlist {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  background-color: deepskyblue;
+}
+
+#selectionlist ul {
+  float: left;
+}
+
+#selectionlist ul a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+#selectionlist ul a:hover {
+  background-color: white;
+  transition: 0.5;
+}
+
+/* #selectionlist {
   display: block;
   width: 200px;
   font-size: 15px;
@@ -56,7 +81,7 @@ body {
 #selectionlist li a:hover{
   background-color: white;
   transition: 0.5s;
-}
+} */
 
 .active {
   background-color: white;
