--- a/global.css
+++ b/global.css
@@ -1,3 +1,10 @@
+/* Colours used: 
+    Whiteish: #eaebfe
+    Light grey: b0b8ce
+    Dark grey: #505a74
+    Medium blue: #354c7c
+    Dark blue: #022954*/
+
 body {
   padding: 2px;
   list-style-type: none;
