--- a/global.css
+++ b/global.css
@@ -30,7 +30,8 @@ body {
     background-color: #354c7c;
     color: #eaebfe;
     padding: 0px;
-    margin: 0;
+    margin-top: 2px;
+    margin: 0px;
     overflow: hidden;
     width: 900px;
 }
@@ -50,6 +51,7 @@ body {
 .navbar a:hover {
     background-color: #eaebfe;
     color: #354c7c;
+    transition: 0.5s;
 }
 
 /* #selectionlist {
