--- a/global.css
+++ b/global.css
@@ -17,7 +17,7 @@ body {
 
 .navbar ul {
     margin: auto;
-    border: 2px dotted white;
+    border: 2px solid white;
     border-radius: 5px;
     list-style-type: none;
     background-color: #354c7c;
@@ -109,7 +109,7 @@ body {
   width: auto;
   padding: 15px;
   border-radius: 5px;
-  border-style: dotted;
+  border-style: solid;
   border-color: white;
   border-width: 3px;
   font: 100% Verdana;
