--- a/global.css
+++ b/global.css
@@ -117,7 +117,7 @@ body {
 }
 
 #updatebar {
-  margin: 2px;
+  margin-top: 3px;
   border: 1px solid gray;
   float: right;
   background-color: #0353A4;
