--- a/global.css
+++ b/global.css
@@ -122,6 +122,7 @@ body {
 #updatebar {
   margin-top: 4px;
   border: 1px solid gray;
+  border-radius: 5px;
   float: right;
   background-color: #0353A4;
   color: white;
