--- a/global.css
+++ b/global.css
@@ -109,7 +109,7 @@ body {
   float: left;
   background-color: #354c7c;
   color: #eaebfe;
-  width: auto;
+  width: 900px;
   padding: 15px;
   border-radius: 5px;
   border-style: solid;
