--- a/global.css
+++ b/global.css
@@ -109,7 +109,7 @@ body {
   float: left;
   background-color: #354c7c;
   color: #eaebfe;
-  width: 900px;
+  width: 850px;
   padding: 15px;
   border-radius: 5px;
   border-style: solid;
@@ -130,6 +130,13 @@ body {
   padding: 15px;
   padding-top: 10px;
   width: 250px;
+}
+
+#mainbox {
+  background-color: #354c7c
+  text-decoration: none;
+  list-style-type: none;
+  border-radius: 5px;
 }
 
 hr {
