--- a/global.css
+++ b/global.css
@@ -122,6 +122,7 @@ body {
 #updatebar {
   margin-left: 1px;
   margin-top: 4px;
+  margin-right: 1px;
   border: 1px solid #eaebfe;
   border-radius: 5px;
   float: right;
