--- a/global.css
+++ b/global.css
@@ -140,7 +140,7 @@ body {
 }
 
 #mainbox {
-  background-color: #354c7c;
+  background-color: #505a74;
   width: 895px;
   text-decoration: none;
   list-style-type: none;
