--- a/global.css
+++ b/global.css
@@ -158,6 +158,19 @@ body {
   width: 250px;
 }
 
+#welcome {
+  margin-left: 1px;
+  margin-right: 4px;
+  border: 1px solid #eaebfe;
+  border-radius: 5px;
+  float: left;
+  background-color: #0353A4;
+  color: white;
+  padding: 15px;
+  padding-top: 1px;
+  width: 250px;
+}
+
 #mainbox {
   float: right;
   margin: auto;
